--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
    <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+   <link href="css/styles.css" rel="stylesheet">
 
     <title>Ristorante Con Fusion</title>
 </head>
@@ -17,7 +18,7 @@
 
     <header class="jumbotron">
         <div class="container">
-            <div class="row">
+            <div class="row row-header">
                 <div class="col-12 col-sm-8">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
@@ -29,7 +30,7 @@
     </header>
 
     <div class="container">
-        <div class="row">
+        <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
@@ -40,17 +41,17 @@
         </div>
 
 
-        <div class="row">
-            <div class="col-sm-4 push-sm-8 col-md-3 push-md-9">
+        <div class="row row-content align-items-center">
+            <div class="col-sm-4 col-md-3 flex-last">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class="col-sm pull-sm-4 col-md pull-md-3">
+            <div class="col-sm col-md flex-first">
                 <h2>Weekend Grand Buffet</h2>
                 <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
             </div>
         </div>
 
-        <div class="row">
+        <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
@@ -62,12 +63,12 @@
         </div>
     </div>
 
-    <footer>
+    <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-5 offset-1 col-sm-2">
                     <h5>Links</h5>
-                    <ul>
+                    <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Menu</a></li>
@@ -85,8 +86,8 @@
 		              Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
                 </div>
-                <div class="col col-sm-4">
-                    <div>
+                <div class="col col-sm-4 align-self-center">
+                    <div style="text-align:center">
                         <a href="http://google.com/+">Google+</a>
                         <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
                         <a href="http://www.linkedin.com/in/">LinkedIn</a>
@@ -96,7 +97,7 @@
                     </div>
                 </div>
            </div>
-           <div class="row">
+           <div class="row justify-content-center">
                 <div class="col-auto">
                     <p>© Copyright 2015 Ristorante Con Fusion</p>
                 </div>
