--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="col-sm col-md flex-last">
             <div class="media">
               <div class="media-body">
-                <h2>Weekend Grand Buffet
+                <h2 class="mt-0">Weekend Grand Buffet
                       <span class="badge badge-danger">NEW</span>
                 </h2>
                 <div class="hidden-xs-down">
