--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@
                 <div class="col col-sm align-self-center">
                       <img src="img/logo.png" class="img-fluid">
                       <div class="btn-group" role="group">
-                          <a role="button" class="btn btn-warning btn-sm btn-block" href="#ReserveTable"
-                            data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
-                            data-placement="bottom">Reserve Table
+                          <a role="button" class="btn btn-warning btn-sm btn-block"
+                          data-toggle="modal" data-target="#reserveModal">Reserve Table
                           </a>
                       </div>
                 </div>
@@ -93,8 +92,64 @@
         </div>
     </header>
 
-    <div class="container">
 
+    <!-- Adding modal for reservation -->
+    <div id="reserveModal" class="modal fade" role="dialog">
+       <div class="modal-dialog modal-lg" role="content">
+         <div class="modal-content">
+           <div class="modal-header">
+               <h4 class="modal-title">Reserve a Table </h4>
+               <button type="button" class="close" data-dismiss="modal">&times;</button>
+           </div>
+           <div class="modal-body">
+             <form>
+               <div class="form-group row">
+                 <label for="numguests" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
+                 <label class="radio-inline"><input type="radio" id="1" name="numguests"> &nbsp; 1 &nbsp; &nbsp;</label>
+                 <label class="radio-inline"><input type="radio" id="2" name="numguests"> &nbsp; 2 &nbsp; &nbsp;</label>
+                 <label class="radio-inline"><input type="radio" id="3" name="numguests"> &nbsp; 3 &nbsp; &nbsp;</label>
+                 <label class="radio-inline"><input type="radio" id="4" name="numguests"> &nbsp; 4 &nbsp; &nbsp;</label>
+                 <label class="radio-inline"><input type="radio" id="5" name="numguests"> &nbsp; 5 &nbsp; &nbsp;</label>
+                 <label class="radio-inline"><input type="radio" id="6" name="numguests"> &nbsp; 6 &nbsp; &nbsp;</label>
+               </div>
+               <div class="form-group row">
+                 <label for="reserveSection" class="col-12 col-sm-2 col-form-label">Section</label>
+                 <div class="btn-group" data-toggle="buttons">
+                       <label class="btn btn-success active">
+                         <input type="radio" name="reserveSection" id="nonSmoking" autocomplete="off" checked> Non-Smoking
+                       </label>
+                       <label class="btn btn-danger">
+                         <input type="radio" name="reserveSection" id="smoking" autocomplete="off"> Smoking
+                       </label>
+                 </div>
+               </div>
+               <div class="form-group row">
+                   <label for="datetime" class="col-12 col-sm-2 col-form-label">Date and Time</label>
+                   <div class="col-12 col-sm-5">
+                       <div class="input-group">
+                         <div class="input-group-addon"><i class="fa fa-calendar"></i></div>
+                         <input type="text" class="form-control" id="datetime" name="datetime" placeholder="Date">
+                       </div>
+                   </div>
+                   <div class="col-12 col-sm-5">
+                       <div class="input-group">
+                         <div class="input-group-addon"><i class="fa fa-clock-o"></i></div>
+                         <input type="text" class="form-control" id="datetime" name="datetime" placeholder="Time">
+                       </div>
+                   </div>
+               </div>
+             </form>
+           </div>
+           <div class="modal-footer">
+               <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Cancel</button>
+               <button type="submit" class="btn btn-primary btn-sm">Reserve</button>
+           </div>
+         </div>
+       </div>
+     </div>
+
+
+    <div class="container">
         <!-- Adding Carousel -->
         <div class="row row-content">
           <div class="col">
@@ -222,51 +277,6 @@
               </div>
             </div>
         </div>
-
-      <a name="ReserveTable">
-        <div class="row row-content align-items-center">
-          <div class="col col-sm-8 offset-sm-2">
-              <div class="card">
-                  <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-                  <div class="card-block">
-                    <form>
-                      <div class="form-group row">
-                        <label for="numguests" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
-                        <label class="radio-inline"><input type="radio" id="numguests" name="numguests"> &nbsp; 1 &nbsp; &nbsp;</label>
-                        <label class="radio-inline"><input type="radio" id="numguests" name="numguests"> &nbsp; 2 &nbsp; &nbsp;</label>
-                        <label class="radio-inline"><input type="radio" id="numguests" name="numguests"> &nbsp; 3 &nbsp; &nbsp;</label>
-                        <label class="radio-inline"><input type="radio" id="numguests" name="numguests"> &nbsp; 4 &nbsp; &nbsp;</label>
-                        <label class="radio-inline"><input type="radio" id="numguests" name="numguests"> &nbsp; 5 &nbsp; &nbsp;</label>
-                        <label class="radio-inline"><input type="radio" id="numguests" name="numguests"> &nbsp; 6 &nbsp; &nbsp;</label>
-                      </div>
-                      <div class="form-group row">
-                          <label for="datetime" class="col-12 col-sm-2 col-form-label">Date and Time</label>
-                          <div class="col-12 col-sm-5">
-                              <div class="input-group">
-                                <div class="input-group-addon"><i class="fa fa-calendar"></i></div>
-                                <input type="text" class="form-control" id="datetime" name="datetime" placeholder="Date">
-                              </div>
-                          </div>
-                          <div class="col-12 col-sm-5">
-                              <div class="input-group">
-                                <div class="input-group-addon"><i class="fa fa-clock-o"></i></div>
-                                <input type="text" class="form-control" id="datetime" name="datetime" placeholder="Time">
-                              </div>
-                          </div>
-
-                      </div>
-                      <div class="form-group row">
-                        <div class="offset-sm-2">
-                          <button type="submit" class="btn btn-primary">Reserve</button>
-                        </div>
-                     </div>
-                    </form>
-                  </div>
-            </div>
-          </div>
-        </div>
-      </a>
-
     </div>
 
     <footer class="footer">
@@ -315,12 +325,6 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
-    <script>
-      $(document).ready(function(){
-      $('[data-toggle="tooltip"]').tooltip();
-       });
-    </script>
 
 </body>
 
